--- a/home/index.html
+++ b/home/index.html
@@ -340,7 +340,44 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   
   
   <div class="pub-list">
-    
+    <div class="pub">
+      <div class="pub-left">
+        <img class="intro-img frame" src="publications/CharacterShot.png">
+      </div>
+      <div class="pub-right">
+        <div class="title">
+          CharacterShot: Controllable and Consistent 4D Character Animation.
+        </div>
+        <div class="desc">
+        </div>
+        <div class="authors">
+          <font style="font-size: 11pt;">
+            <a class="author" href="https://jeoyal.github.io/home/"><b>Junyao Gao*</b></a>,
+            <a class="author" href="https://scholar.google.com/citations?hl=zh-CN&user=LNtaU5YAAAAJ">Jiaxing Li*</a>,
+            <a class="author" href="https://github.com/liuwenran">Wenran Liu</a>,
+            <a class="author" href="https://zengyh1900.github.io/">Yanhong Zeng</a>,
+            <a class="author" href="https://muzishen.github.io/">Fei Shen</a>,
+            <a class="author" href="http://chenkai.site/">Kai Chen</a>
+            <a class="author" href="https://scholar.google.com/citations?user=6TA1oPkAAAAJ&hl=zh-CN">Yanan Sun</a>,
+            <a class="author" href="https://vill-lab.github.io/">Cairong Zhao</a>
+            (* equal contribution)
+          </font>
+          </span>
+        </div>
+        <div class="publish">
+          <!-- <span class="publisher"> NeurIPS, 2024</span> -->
+          <span class="place"></span>
+        </div>
+        <b><span >Preperint, 2025</span></b>
+        <div class="tags">
+          [<a class="tag" href="https://arxiv.org/abs/2508.07409"> <strong>paper</strong></a>]
+          [<a class="tag" href="https://github.com/Jeoyal/CharacterShot"><strong>code</strong></a>]
+        </div>
+
+      </div>
+    </div>
+    <br>
+
     <div class="pub">
       <div class="pub-left">
         <img class="intro-img frame" src="publications/LEGO.jpg">
@@ -379,8 +416,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
       </div>
     </div>
-    
-
+    <br>
     <div class="pub"></div>
       <div class="pub-left">
         <img class="intro-img frame" src="publications/FaceShot.png">
